Version 2.02.96 - 
================================
  Unlike 'mirror' segtype, 'raid1' should perform flush on suspend.
  Add udev info and context to lvmdump.
  Fix RAID device replacement code so that it works under snapshot.
  Fix inability to split RAID1 image while specifying a particular PV.
  Update man pages to give them same look&feel.
  Fix lvresize of thin pool for stipped devices.
  For lvresize round upward when specifying number of extents.
  For lvcreate with %FREE support rounding downward strip alignment.
  Change message severity to log_very_verbose for missing dev info in udev db.
  Fix problems when specifying PVs during RAID down-converts.
  Fix ability to handle failures in mirrored log (regression intro 2.02.89).
  Fix unlocking volume group in vgreduce in error path.
  Exit immediately if LISTEN_PID env var incorrect during systemd handover.
  Detect VG name being part of the LV name in lvconvert --splitmirrors -n.
  Fix exclusive lvchange running from other node. (2.02.89)
  Add 'vgscan --cache' functionality for consistency with 'pvscan --cache'.
  Keep exclusive activation in pvmove if LV is already active.
  Disallow pvmove for exclusive LV if some affected LVs are not exclusively activated.
  Remove unused and wrongly set cluster VG flag from clvmd lock query command.
  Fix pvmove for exclusively activated LV pvmove in clustered VG. (2.02.86)
  Always free hash table on update_pvid_to_vgid() in lvmetad.
  Update and fix monitoring of thin pool devices.
  Check hash insert success in lock_vg clvmd.
  Check for buffer overwrite in get_cluster_type() clvmd.
  Fix global/detect_internal_vg_cache_corruption config check.
  Update lcov Makefile target to support all dmeventd plugins.
  Fix initializiation of thin monitoring (2.02.92).
  Support improperly formated device numbers in /proc/devices (2.02.91).
  Fix fsadm propagation of -e option.
  Fix fsadm parsing of /proc/mounts files (don't check for substrings).